@@ -1,5 +1,10 @@
 2018-04-09  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* gdb.base/maint.exp: Process output from 'maint print registers'
+	line at a time.
+
+2018-04-09  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* gdb.base/callfuncs.exp (fetch_all_registers): Add riscv register
 	filter pattern.
 
